--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 body {
   color: #000;
   line-height: 1;
-  font-family: "Montserrat";
+  font-family: sans-serif;
   font-size: 0.875rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -33,7 +33,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "Montserrat";
+  font-family: sans-serif;
   font-size: inherit;
 }
 
@@ -311,7 +311,7 @@ html.nocursor input {
   margin-bottom: 25px;
 }
 
-[data-filter-nav] button {
+[data-filter-nav] [data-filter-button] {
   background-color: orange;
   color: #fff;
   padding: 15px 30px;
@@ -319,11 +319,11 @@ html.nocursor input {
   border-radius: 30px;
 }
 
-[data-filter-nav] button:hover {
+[data-filter-nav] [data-filter-button]:hover {
   background-color: rgb(224, 146, 0);
 }
 
-[data-filter-nav] button._active {
+[data-filter-nav] [data-filter-button]._active {
   background-color: rgb(209, 136, 0);
 }
 
@@ -582,6 +582,14 @@ html.nocursor input {
 .filter:not(:last-child) {
   margin-bottom: 100px;
 }
+.filter__title {
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 1.2;
+  text-align: center;
+}
 
 .cards-mainscreen {
   width: 100%;
@@ -626,6 +634,7 @@ html.nocursor input {
   text-transform: uppercase;
 }
 .cards-mainscreen__text {
+  line-height: 1.2;
   margin-bottom: 0.9375em;
   flex: 1 1 auto;
 }
@@ -633,6 +642,37 @@ html.nocursor input {
   align-self: flex-start;
   font-size: 18px;
   font-weight: 700;
+}
+
+[data-filter-card] .cards-mainscreen__picrute::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-weight: 700;
+  font-size: 50px;
+  z-index: 2;
+}
+
+[data-filter-card=one] .cards-mainscreen__picrute::before {
+  content: "1";
+}
+
+[data-filter-card=two] .cards-mainscreen__picrute::before {
+  content: "2";
+}
+
+[data-filter-card=three] .cards-mainscreen__picrute::before {
+  content: "3";
+}
+
+[data-filter-card=four] .cards-mainscreen__picrute::before {
+  content: "4";
+}
+
+[data-filter-card=five] .cards-mainscreen__picrute::before {
+  content: "5";
 }
 
 .anim {
